--- a/templates/index.html
+++ b/templates/index.html
@@ -4,61 +4,22 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Color Palette Generator</title>
-
-		<style>
-			.container {
-				background-color: black;
-				width: 100%;
-				height: 100vh;
-				display: flex;
-				flex-direction: row;
-			}
-
-			.color {
-				height: 100%;
-			}
-		</style>
+		<link rel="stylesheet" href="styles.css" />
 	</head>
 
 	<body>
 		<div class="container"></div>
 		<form id="form">
 			<input type="text" name="query" />
-			<button>Submit</button>
+			<button id="btn">Submit</button>
 		</form>
 
-		<script>
-			const form = document.querySelector("#form");
-
-			form.addEventListener("submit", e => {
-				e.preventDefault();
-				query = form.elements.query.value;
-				fetch("/palette", {
-					method: "POST",
-					headers: {
-						"Content-Type": "application/x-www-form-urlencoded",
-					},
-					body: new URLSearchParams({
-						query,
-					}),
-				})
-					.then(response => response.json())
-					.then(colors => {
-						console.log(colors);
-						const container = document.querySelector(".container");
-						for (const color of colors) {
-							const div = document.createElement("div");
-							div.classList.add("color");
-							div.style.backgroundColor = color;
-							div.style.width = `calc(100%/${colors.length})`;
-
-							container.appendChild(div);
-						}
-					})
-					.catch(e => console.error(e));
-
-				form.elements.query.value = "";
-			});
-		</script>
+		<script src="app.js"></script>
 	</body>
 </html>
+
+<!-- upgrades:
+	hacerlo responsive
+	agregar un H1 con el parámetro de búsqueda al limpiar el input
+	adaptar el color de la letra al color del fondo para que siempre sean complementarios
+-->
